# W2D

./: .clang-format  .gitignore  CMakeLists.txt  README.md  framework.c  framework.h  main.c  shader.wgsl
src/: framework.c  framework.h  main.c  matrix.c  matrix.h  renderer.c  renderer.h  sprite.c  sprite.h  spriteModel.c  spriteModel.h  texture.c  texture.h  unused.h  wgpuHelper.c  wgpuHelper.h
